# tpt-gpu

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GEMM_VS_CUBLAS_IMPLEMENTATION.md  LICENSE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  fix_lib.py  harness.rs  todo 1260627.md  todo 1260718.md  todo.md  tpt_bench_quick_output.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  release.yml  validate-profiles.yml
docs/: user-guide.md
docs/tutorials/: 01_introduction.md  02_isa_fundamentals.md  03_kernel_drivers.md  04_tptir_overview.md  05_tptir_passes.md  06_memory_management.md  07_kernel_scheduling.md  08_gpu_primitives.md  09_python_api.md  10_pytorch_integration.md  11_tpt_script_basics.md  12_tpt_script_kernels.md  13_tpt_script_advanced.md  14_end_to_end.md  15_building_a_model.md  16_performance_tuning.md  17_distributed_computing.md  README.md
layer1_isa/sim/: Makefile
layer1_isa/spec/: tpt_isa_spec.md
layer3_tptc/rust/: Cargo.toml  build.rs
layer3_tptc/rust/src/: bench.rs  dispatch.rs  ffi_stubs.cpp  fusion.rs  ir.rs  lib.rs  provenance.rs  tuning.rs  validate.rs
layer4_tptr/: Cargo.toml  README.md
layer4_tptr/spec/: tptr_spec.md
layer4_tptr/tptr-c/: Cargo.toml  Makefile  cbindgen.toml
layer4_tptr/tptr-c/examples/c/: hello_device.c
layer4_tptr/tptr-c/include/tptr/: tptr_capi.h
layer4_tptr/tptr-c/src/: lib.rs
layer4_tptr/tptr-core/: Cargo.toml  README.md
layer4_tptr/tptr-core/src/: error.rs  lib.rs
layer4_tptr/tptr-core/src/command/: mod.rs  queue.rs
layer4_tptr/tptr-core/src/device/: cuda_ctx.rs  device.rs  mod.rs
layer4_tptr/tptr-core/src/kernel/: launch.rs  mod.rs
layer4_tptr/tptr-core/src/memory/: allocator.rs  mod.rs  types.rs
layer4_tptr/tptr-py/: Cargo.toml  pyproject.toml
layer4_tptr/tptr-py/src/: lib.rs
layer5_tptp/: Cargo.toml
layer5_tptp/benches/: Cargo.toml  README.md
layer5_tptp/benches/src/: harness.rs  lib.rs  problem_configs.rs  stats.rs
layer5_tptp/benches/src/examples/: fused_gemm_benchmark.rs  profile_attention.rs  profile_conv2d.rs  run_comprehensive.rs
layer5_tptp/tptir/: tptir_batchnorm.mlir  tptir_elementwise.mlir  tptir_embedding.mlir  tptir_fused_gemm.mlir  tptir_gemm.mlir  tptir_groupnorm.mlir  tptir_kernels.td  tptir_layernorm.mlir  tptir_pooling.mlir  tptir_rmsnorm.mlir  tptir_softmax.mlir
layer5_tptp/tptp-core/: Cargo.toml
layer5_tptp/tptp-core/examples/: conv3d_test.rs
layer5_tptp/tptp-core/src/: lib.rs
layer5_tptp/tptp-core/src/kernels/: attention.rs  batchnorm.rs  conv2d.rs  conv3d.rs  elementwise.rs  fused_gemm.rs  gemm.rs  groupnorm.rs  layernorm.rs  mod.rs  pooling.rs  rmsnorm.rs  softmax.rs
layer5_tptp/tptp-core/src/tptir/: compile.rs
layer6_framework/: write_files.py
layer6_framework/tests/: test_dispatch.py  test_dispatch_rust.py  test_jax.py  test_pytorch.py
layer6_framework/tptr/: __init__.py
layer6_framework/tptr-core/: Cargo.toml
layer6_framework/tptr-core/src/: lib.rs
layer6_framework/tptr-core/src/dispatch/: batch.rs  ops.rs  pool.rs
layer6_framework/tptr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
layer6_framework/tptr/_ffi/: __init__.py  _sim.py
layer6_framework/tptr/core/: __init__.py
layer6_framework/tptr/dispatch/: __init__.py
layer6_framework/tptr/pytorch/: ops.py  tensor.py
layer6_framework/tptr/tensor/: __init__.py
layer6_tptf/: pyproject.toml
layer6_tptf/tests/: test_dispatch.py  test_jax_backend.py
layer6_tptf/tptf/: __init__.py  backend.py  jax_backend.py  runtime_bridge.py  torch_backend.py
layer6_tptf/tptf-dispatch/: Cargo.toml
layer6_tptf/tptf-dispatch/src/: attention.rs  conv2d.rs  gemm.rs  lib.rs  router.rs
layer7_tptb/: BETA_RELEASE.md  Cargo.toml  RELEASE_NOTES.md
layer7_tptb/examples/: 01_hello_tensor.tpts  02_custom_kernel.tpts  03_transformer_block.tpts  04_training_loop.tpts  README.md
layer7_tptb/examples/distributed/: README.md  fsdp_8gpu.tpts  pipeline_parallel.tpts
layer7_tptb/stdlib/tpt/: data.tpts  functional.tpts  init.tpts  nn.tpts  optim.tpts
layer7_tptb/tptb-core/: Cargo.toml  README.md
layer7_tptb/tptb-core/src/: lib.rs
layer7_tptb/tptb-core/src/codegen/: mod.rs  rust_emit.rs  tptir_emit.rs
layer7_tptb/tptb-core/src/introspect/: mod.rs
layer7_tptb/tptb-core/src/semantic/: builtins.rs
layer7_tptb/tptb-format/: Cargo.toml
layer7_tptb/tptb-format/src/: formatter.rs  lib.rs  linter.rs
layer7_tptb/tptb-lsp/: Cargo.toml
layer7_tptb/tptb-lsp/src/: completion.rs  definition.rs  diagnostics.rs  hover.rs  lib.rs  main.rs  state.rs  symbols.rs
tools/kernel-generator/: Cargo.toml  _patch.js  _write_ir.py  add_parse.py  append_ir.py  append_ir2.py  fix_as.py  fix_as2.py  fix_cargo.py  fix_ir.py  fix_ir2.py  fix_ir3.py  fix_lib.py  fix_main.py  fix_main2.py  fix_main3.py  fix_opkind.py  fix_passes.py  gen_tail.py  gen_tail2.py  ir_tail.rs  rewrite_ir.py  truncate.py  write_ir.py
tools/kernel-generator/src/: main.rs
tools/kernel-optimizer/: Cargo.toml
tools/kernel-optimizer/src/: attention_eval.rs  conv2d_eval.rs  kernel_category.rs  lib.rs  main.rs  normalization_eval.rs  vector_add_eval.rs
tools/shared/: Cargo.toml
tools/shared/src/: lib.rs  provider.rs
tools/tpt-bench/: Cargo.toml
tools/tpt-bench/examples/: llama3_shapes.toml  quick_smoke.toml  resnet50_shapes.toml
tools/tpt-bench/src/: baseline.rs  config.rs  correctness.rs  detect.rs  main.rs  report.rs
tools/tpt-playground/: Cargo.toml  build.ps1  build.sh  index.html
tools/tpt-playground/src/: lib.rs
tuning/: RTX_3090.json  dispatch_table.json  schema.json
v/tpt-vscode/: language-configuration.json  package.json
v/tpt-vscode/src/: extension.ts
v/tpt-vscode/syntaxes/: tpt.tmLanguage.json
