[workspace]
members = [
    "layer3_tptc/rust",
    "tools/kernel-generator",
    "layer6_tptf/tptf-dispatch",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
description = "TPT GPU kernel generator and compiler infrastructure"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
libc = "0.2"

