[workspace]
resolver = "2"
members = ["tptp-core", "benches"]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["TPT GPU Contributors"]
description = "TPT Primitives - TPTIR kernels + Rust wrappers for GPU compute"
license = "MIT OR Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/tpt-solutions/tpt-gpu"

[workspace.dependencies]
thiserror = "2"
parking_lot = "0.12"
log = "0.4"
bytemuck = "1.21"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
