[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "tptf"
version = "0.1.0"
description = "TPT GPU framework backends — PyTorch and JAX integration"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "jax>=0.4",
    "jaxlib>=0.4",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-xdist",
]

[tool.maturin]
python-source = "."
features = ["pyo3/extension-module"]
module-name = "tptf._dispatch"
