[package]
name = "tptc-rs"
version = "0.1.0"
edition = "2021"
description = "Rust port of TPTIR compiler stack"

[lib]
name = "tptc_rs"
crate-type = ["lib", "cdylib"]

[features]
default = ["native"]
native = []
ffi = []

[build-dependencies]
cc = "1"

[dependencies]
libc = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }