[package]
name = "tpt-gpu-runtime-c"
version = "1.0.0"
edition = "2021"
description = "TPT Runtime - C ABI (stable C API over tpt-gpu-runtime)"
license = "MIT OR Apache-2.0 WITH LLVM-exception"
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]
name = "tptr_c"

[dependencies]
tpt-gpu-runtime = { path = "../tptr-core" }
