[package]
name = "tptr-py"
version = "0.1.0"
edition = "2021"
description = "TPT Runtime - Python bindings via PyO3"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]
name = "tptr"

[dependencies]
tptr-core = { path = "../tptr-core" }
pyo3 = { version = "0.24", features = ["extension-module"] }
