[package]
name = "tptb-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "TPT Script compiler frontend — lexer, AST, and parser"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/tptb-core"
homepage = "https://github.com/tpt-gpu/tpt-gpu"
readme = "README.md"
keywords = ["gpu", "compiler", "ml", "ai", "tptscript", "tptir"]
categories = ["compilers", "development-tools", "science"]
rust-version = "1.75"

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
# Used only in tests
