[package]
name = "tptb-format"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "TPT Script formatter and linter"
license.workspace = true
repository.workspace = true

[dependencies]
tptb-core = { path = "../tptb-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
