[package]
name = "tptb-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "TPT Script Language Server Protocol implementation"
license.workspace = true
repository.workspace = true

[dependencies]
tptb-core = { path = "../tptb-core" }
tokio = { workspace = true }
tower-lsp = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
tptb-format = { path = "../tptb-format" }
tracing = "0.1"
tracing-subscriber = "0.3"
