[package]
name = "tpt"
version.workspace = true
edition.workspace = true
description = "TPT GPU kernel generator CLI"
license.workspace = true

[[bin]]
name = "tpt"
path = "src/main.rs"

[dependencies]
tptc-rs = { path = "../../layer3_tptc/rust" }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
