[package]
name = "tpt-optimizer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Self-iterating TPT GPU kernel parameter optimizer"

[lib]
name = "tpt_optimizer"
path = "src/lib.rs"

[[bin]]
name = "tpt-optimizer"
path = "src/main.rs"

[dependencies]
tptc-rs = { path = "../../layer3_tptc/rust" }
tpt-shared = { path = "../shared" }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
