[package]
name = "tpt-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared AI provider abstraction for TPT GPU tools"

[lib]
name = "tpt_shared"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", features = ["blocking", "json"] }
