[workspace]

[package]
name = "tpt-playground"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for the TPT Script compiler playground"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tptb-core = { path = "../../layer7_tptb/tptb-core" }

[profile.release]
opt-level = "z"
lto = true
